@@ -1,4 +1,6 @@
 version 2.0.12 (cvs):
+	* Make debug, quiet and build_suggestion_menu static in gtkspell.c
+	  to prevent exporting them.
 
 version 2.0.11 (27-May-2005):
 	* Re-enable apostrophe word-breaking workarounds (GNOME bug #97545).
